# WWIII-APIC

./: .coveragerc  .cursorrules  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
.cursor/: GIT_WORKFLOW.md  README.md  commands.json
alembic/: env.py
alembic/versions/: 001_create_players_table.py
app/: main.py
app/adapters/repositories/: player_repository.py
app/api/v1/: __init__.py  players.py
app/core/: config.py
app/db/: session.py
app/domain/: player.py
app/models/: __init__.py  player.py
app/schemas/: player.py
app/services/: auth.py
app/use_cases/: ports.py  register_player.py
scripts/: cd.sh  ci.sh  git-helper.sh  quality-gates.sh
tests/: conftest.py
tests/e2e/: test_player_registration_api.py  test_player_registration_api_errors.py  test_player_registration_api_general_error.py
tests/integration/adapters/: test_player_repository.py
tests/integration/api/: test_players_coverage.py
tests/integration/db/: test_session_rollback.py
tests/unit/db/: test_session.py  test_session_rollback_mock.py
tests/unit/domain/: test_player.py  test_player_edge_cases.py
tests/unit/main/: test_main.py
tests/unit/schemas/: test_player_schemas.py
tests/unit/services/: test_auth.py
tests/unit/use_cases/: test_register_player.py  test_register_player_bcrypt_fallback.py  test_register_player_edge_cases.py
